(ver 1.4.47.13) - persistence is updated whenever candle is updated or played becomes trapped/revived - candle status is working - commands are now properly working - removed those who left from the creative menu
- candle compass still doesnt work